bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,4 +4,4 @@ pipelines:
   default:
     - step:
         script:
-          - git remote add sync git@github.com:arun-source/Lm.git
+          - git push --mirror git@github.com:arun-source/Lm.git
