--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,7 +1,6 @@
-clone:
-  depth: full
 pipelines:
-  default:
-    - step:
-        script:
-          - git push --mirror git@github.com:arun-source/Lm.git
+  branches:
+    '**':
+      - step:
+          script:
+            - git push --mirror git@github.com:arun-source/Lm.git
