--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,7 +1,7 @@
+clone:
+  depth: full
 pipelines:
-    branches:
-      '**':
-      - step:
-          script:
-            - git remote add sync git@github.com:arun-source/Lm.git
-            
+  default:
+    - step:
+        script:
+          - git push --mirror git@github.com:arun-source/Lm.git
