--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,10 +1,7 @@
+clone:
+  depth: full
 pipelines:
-  branches:
-    master:
-      - step:
-          script:
+  default:
+    - step:
+        script:
           - git push --mirror git@github.com:arun-source/Lm.git
-    feature/dev:
-      - step:
-          script:
-            - git push --mirror git@github.com:arun-source/Lm.git
