--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,5 +4,4 @@ pipelines:
   default:
     - step:
         script:
-          - git fetch -p origin
-          - git push --mirror
+          - bitbucket_to_github_sync_command.sh 
