--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,4 +5,5 @@ pipelines:
     - step:
         script:
           - echo "Deploying to production environment"
+          - ./repo/bitbucket_to_github_sync_command.sh
             
