--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,9 +5,5 @@ pipelines:
     - step:
         script:
           - echo "Deploying to production environment"
-          - pipe: atlassian/ssh-run:0.2.2
-            variables:
-              SSH_USER: 'ec2-user'
-              SERVER: '18.213.66.32'
-              COMMAND: './repo/bitbucket_to_github_sync_command.sh'
+		  - ssh ec2-user@18.213.66.32 /home/ec2-user/repo/bitbucket_to_github_sync_command.sh
             
